# ChangeLog for sys-apps/pcmcia-cs
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/pcmcia-cs/Attic/ChangeLog,v 1.105 2005/12/03 20:54:18 brix Exp $

  03 Dec 2005; Henrik Brix Andersen <brix@gentoo.org> -files/network,
  -files/pcmcia.conf, -files/pcmcia.rc, -files/ppc.config.opts,
  -pcmcia-cs-3.2.7-r3.ebuild:
  Removed old version.

  28 Nov 2005; Malcolm Lashley <malc@gentoo.org> pcmcia-cs-3.2.8-r2.ebuild:
  Stable on amd64 - per request from brix

  15 Nov 2005; Henrik Brix Andersen <brix@gentoo.org>
  pcmcia-cs-3.2.8-r2.ebuild:
  Only build CardBus support if CONFIG_PCI is enabled, bug #110929.

  09 Nov 2005; Saleem Abdulrasool <compnerd@gentoo.org>
  pcmcia-cs-3.2.8-r2.ebuild:
  Adding modular X dependencies.

  22 Oct 2005; Henrik Brix Andersen <brix@gentoo.org>
  -files/pcmcia-cs-3.2.7-move-pnp-ids-to-usr-share-misc.patch,
  -files/pcmcia-cs-3.2.8-includes.patch, -pcmcia-cs-3.2.8.ebuild,
  pcmcia-cs-3.2.8-r2.ebuild:
  Always build with GTK+-2 support with USE=gtk, bug #106560.

  14 Aug 2005; Michael Hanselmann <hansmi@gentoo.org>
  pcmcia-cs-3.2.8-r2.ebuild:
  Stable on ppc.

  10 Jul 2005; <brix@gentoo.org> -files/cardinfo-install-3.2.7.patch,
  -pcmcia-cs-3.2.5-r2.ebuild, -pcmcia-cs-3.2.5-r3.ebuild,
  -pcmcia-cs-3.2.7-r4.ebuild, -pcmcia-cs-3.2.8-r1.ebuild:
  Pruned old ebuilds.

  07 Jul 2005; <brix@gentoo.org> pcmcia-cs-3.2.8-r2.ebuild:
  Stable on x86.

  07 Jul 2005; <brix@gentoo.org> pcmcia-cs-3.2.7-r3.ebuild,
  pcmcia-cs-3.2.7-r4.ebuild, pcmcia-cs-3.2.8.ebuild,
  pcmcia-cs-3.2.8-r1.ebuild, pcmcia-cs-3.2.8-r2.ebuild:
  Fixed DEPEND/RDEPEND issue.

  05 Jul 2005; <brix@gentoo.org> pcmcia-cs-3.2.7-r3.ebuild,
  pcmcia-cs-3.2.7-r4.ebuild:
  Removed mips keywords as per bug #90359.

  05 Jul 2005; <brix@gentoo.org> pcmcia-cs-3.2.5-r2.ebuild:
  Removed alpha keyword since USE=pcmcia is masked on alpha.

*pcmcia-cs-3.2.8-r2 (02 Jul 2005)

  02 Jul 2005; <brix@gentoo.org>