@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/pcmciautils
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/pcmciautils/ChangeLog,v 1.11 2005/12/06 20:13:04 brix Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/pcmciautils/ChangeLog,v 1.12 2005/12/07 14:48:19 brix Exp $
+
+  07 Dec 2005; Henrik Brix Andersen <brix@gentoo.org>
+  pcmciautils-010.ebuild, pcmciautils-011.ebuild:
+  Block virtual/pcmcia.
 
 *pcmciautils-011 (06 Dec 2005)
 
